# rgs

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.txt
Assets/: brdf.hdr  conv_0.hdr  conv_10.hdr  conv_diffuse_container_free_Ref.hdr  imgui.ini  prefilter-200x341-0.75.hdr  prefilter-480x240-0.60.hdr
Assets/hdr/: newport_loft-0.hdr  newport_loft-2.hdr  newport_loft-4.hdr
Assets/hdr/container_free_hdr/: HDRI Hub - Free Samples.URL  HDRI Hub - The Shop.URL
Assets/hdr/container_free_hdr/Container_Free/: Container_Free.ibl  container_free_Thumb.tga
Assets/prefilter/: prefilter-160x80-1.00.hdr  prefilter-480x240-0.50.hdr  prefilter-640x320-0.25.hdr
Assets/prefilter_envmap/container_free_Ref/: 0.hdr  2.hdr  3.hdr  4.hdr
Docs/: README.md
RGS/src/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  InputCode.h  Layouts.h  Main.cpp  Math.cpp  Math.h  Model.cpp  Model.h  Platform.cpp  RGS.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h  rgspch.cpp  rgspch.h
RGS/src/ImGui/: ImGuiWindow.cpp  ImGuiWindow.h  imgui_stdlib.cpp
RGS/src/RGS/: Config.h  JobSystem.cpp  JobSystem.h  Model.cpp  Model.h  Platform.cpp  Platform.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
RGS/src/RGS/Base/: Base.h  Instrumentor.h  Maths.cpp  Maths.h
RGS/src/RGS/Layer/: CameraLayer.cpp  CameraLayer.h  IBLPBRLayer.cpp  IBLPBRLayer.h  Layer.cpp  Layer.h  ToolLayer.cpp  ToolLayer.h
RGS/src/RGS/Render/: Framebuffer.cpp  Framebuffer.h  MSAASettings.h  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h
RGS/src/RGS/Shader/: BRDFShader.cpp  BRDFShader.h  BlinnShader.cpp  BlinnShader.h  ConvSkyShader.cpp  ConvSkyShader.h  FlatColorShader.cpp  FlatColorShader.h  IBLPBRShader.cpp  IBLPBRShader.h  PBRShader.cpp  PBRShader.h  ShaderBase.h  SkyboxShader.cpp  SkyboxShader.h
RGS/src/Windows/: WindowsWindow.cpp  WindowsWindow.h
assets/: conv_2.hdr  conv_4.hdr  diffuse_conv.hdr  prefilter-800x400-0.00.hdr
assets/hdr/: newport_loft-1.hdr  newport_loft-3.hdr  newport_loft_diffuse_conv.hdr
assets/hdr/container_free_hdr/: readme.txt
assets/hdr/container_free_hdr/Container_Free/: container_free_Env.hdr  container_free_Prev.tga  imgui.ini
assets/prefilter/: conv_1.hdr  conv_3.hdr  prefilter-320x160-0.75.hdr
assets/prefilter_envmap/container_free_Ref/: 1.hdr
src/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  InputCodes.h  Main.cpp  Math.cpp  Math.h  ShaderBase.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
src/RGS/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  Main.cpp  Maths.cpp  Maths.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  WindowsWindow.cpp  WindowsWindow.h
src/RGS/Shaders/: BlinnShader.cpp  BlinnShader.h  ShaderBase.h
